--- a/index.html
+++ b/index.html
@@ -35,14 +35,22 @@
       <div id="info">
         <p>Ahoj jak se mas?</p>
       </div>
-      <div id="settings"> Nastaveni</div>
+      <div id="settings">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="submit_settings">Uložit nastavení</div>
+      </div>
     </div>
     <div class="draw">
       <div id="draw_player"></div>
       <div id="game_state">
         <h1 id="game_state_text"></h1>
       </div>
-      <div id="again"></div>
+      <div id="again">
+        <button onclick="again()">Again?</button>
+      </div>
     </div>
   </div>
 </body>
