--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
       <div class="options_menu" id="right_b" onclick='options_click("right_b", "left_b")'
         style="border-bottom-right-radius: 10%;">
         Nastavení</div>
-      <div id="info">
-        <p>Ahoj jak se mas?</p>
+      <div id="info3" class="info">
+        <p>Cílem hry je dosáhnout 3 a více znaků stejné barvy za sebou, ať už v sloupci, řadě nebo diagonále. </p>
+        <p>Hráči se střídají po každém tahu.</p>
+        <p>Herní plán je omezen na 3x3 polí</p>
       </div>
+      <div id="info5" class="info" style="display: none;">
+        <p>Cílem hry je dosáhnout 5 a více znaků stejné barvy za sebou, ať už v sloupci, řadě nebo diagonále. </p>
+        <p>Hráči se střídají po každém tahu.</p>
+        <p>Herní plán je omezen na 15x15 polí.</p>
+      </div>
+
       <div id="settings">
         <div class="fieldSize subSettingsContainer" style="border-radius: 0 0 10% 10%;">
           <div class="mainB subSettings">Velikost pole:</div>
@@ -46,12 +54,12 @@
         <div class="subSettingsContainer" style="border-radius: 10% 10% 10% 10%;">
           <div class="mainB subSettings">Barvy:</div>
           <div class="secondB subSettings">
-            <div class="colorsSettings" style=""></div>
-            <div class="colorsSettings" style=""></div>
+            <div class="colorsSettings" style="background-color: #ff1053;"></div>
+            <div class="colorsSettings" style="background-color: #e7e247;"></div>
           </div>
           <div class="secondB subSettings">
-            <div class="colorsSettings" style=""></div>
-            <div class="colorsSettings" style=""></div>
+            <div class="colorsSettings" style="background-color: #54defd;"></div>
+            <div class="colorsSettings" style="background-color: #e7e247;"></div>
           </div>
         </div>
         <div class="subSettingsContainer" style="border-radius: 10% 10% 0 0;">
