--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
     </div>
     <div class="options">
       <!-- TOP BUTTONS -->
-      <div style="height: 20%;">
-        <div class="options_menu" id="left_b" onclick='options_click("left_b", "right_b")'
-          style="border-bottom-left-radius: 10%;">
-          Pravidla
-        </div>
-        <div class="options_menu" id="right_b" onclick='options_click("right_b", "left_b")'
-          style="border-bottom-right-radius: 10%;">
-          Nastavení</div>
-      </div>
+
       <!-- INFORMATIONS AND RULES -->
-      <div id="info" style="width: 100%;height: 80%;display:block;">
-        <div class="info3" style="height: 100%;">
+      <div id="info" style="width: 100%;height: 100%;display:block;">
+        <div class="option">
+          <div class="options_menu" id="left_b" onclick='options_click("left_b", "right_b")'
+            style="border-bottom-left-radius: 10%;">
+            Pravidla
+          </div>
+          <div class="options_menu" id="right_b" onclick='options_click("right_b", "left_b")'
+            style="border-bottom-right-radius: 10%;">
+            Nastavení</div>
+        </div>
+        <div class="info3" style="height: 80%;">
           <div class="divP">&#8226;Cílem hry je dosáhnout 3 a více znaků stejné barvy za
             sebou, ať
             už v sloupci, řadě
@@ -51,9 +52,26 @@
       </div>
       <!-- SETTINGS -->
       <div id="settings">
-        <div class="option"></div>
-        <div class="option"></div>
-        <div class="option"></div>
+        <div class="option">
+          <div class="options_menu" id="left_b" onclick='options_click("left_b", "right_b")'
+            style="border-bottom-left-radius: 10%;">
+            Pravidla
+          </div>
+          <div class="options_menu" id="right_b" onclick='options_click("right_b", "left_b")'
+            style="border-bottom-right-radius: 10%;">
+            Nastavení</div>
+        </div>
+        <div class="option">
+          <div class="suboption suboption_main">Pole:</div>
+          <div class="suboption">3x3</div>
+          <div class="suboption">15x15</div>
+        </div>
+        <div class="option">
+          <div class="suboption suboption_main">Barvy:</div>
+          <div class="suboption">3x3</div>
+          <div class="suboption">15x15</div>
+        </div>
+        <div class="option">WTF</div>
         <div class="submit_settings">Uložit nastavení</div>
       </div>
     </div>
