bufix(xy) and working grid change

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
         <div class="option">
           <div class="suboption suboption_main">Barvy:</div>
-          <div class="suboption suboption_second" style="padding:0;"
-            onclick='colorClick({main:"#ff1053", second:"#e7e247"})'>
+          <div class="suboption suboption_second" id="yellpink" style="padding:0;"
+            onclick='colorClick({main:"#ff1053", second:"#e7e247"},"yellpink")'>
             <div
               style="height:100%;width: 50%; padding-top: 2rem;padding-bottom: 2rem; background-color: #e7e247; float: left; color: #e7e247; border-bottom-left-radius: 1rem; user-select: none;">
               .</div>
@@ -75,8 +75,8 @@
               style="height:100%;width: 50%; padding-top: 2rem; padding-bottom: 2rem; background-color: #ff1053; float: right; color: #ff1053; border-top-right-radius: 1rem; user-select: none;">
               .</div>
           </div>
-          <div class="suboption suboption_second" style="padding:0;"
-            onclick='colorClick({main:"#e7e247", second:"#54defd"})'>
+          <div class="suboption suboption_second" id="yellblue" style="padding:0;"
+            onclick='colorClick({main:"#e7e247", second:"#54defd"}, "yellblue")'>
             <div style=" height:100%;width: 50%; padding-top: 2rem;padding-bottom: 2rem; background-color: #e7e247;
             float: left; color: #e7e247; border-top-left-radius: 1rem; user-select: none;">
               .</div>
