fully working options and grid, aware of win condition bug on 15x15

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               .</div>
           </div>
           <div class="suboption suboption_second" id="yellblue" style="padding:0;"
-            onclick='colorClick({main:"#e7e247", second:"#54defd"}, "yellblue")'>
+            onclick='colorClick({main:"#54defd", second:"#e7e247"}, "yellblue")'>
             <div style=" height:100%;width: 50%; padding-top: 2rem;padding-bottom: 2rem; background-color: #e7e247;
             float: left; color: #e7e247; border-top-left-radius: 1rem; user-select: none;">
               .</div>
