repaired one side of diagonal check

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p class="footer" onclick="window.location.href= 'https://daybringer.github.io/'">©2020 Michal Vaňata</p>
+  </footer>
 </body>
 
 </html>
